# docs-reviwer-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  confs.py  db.py  llm.py  vectorstore.py
app/dto/: log_level.py
app/dto/UI/: chat_state.py
app/pages/: description.md  home.py
app/schemas/: description.md  doc_metadata.py
app/services/: llm.py  logging.py  vectorstore.py
app/utils/: get_secret.py  load_documents.py  rate_limiters.py  single_query_docs.py
