[project]
name = "docs-reviewer"
version = "0.1.0"
description = "AI Documents reviewer app built with streamlit and langchain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.16",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "pypdf>=6.0.0",
    "python-decouple>=3.8",
    "streamlit>=1.48.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "ruff>=0.12.8",
]

[tool.ruff]
src = ["app", "tests"]
extend-exclude = ["migrations"]

# Select rules
select = [
    "E",  # pycodestyle errors (includes spacing)
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
    "UP", # pyupgrade
    "S",  # flake8-bandit security checks
    "Q",
]

# Ignore some rules (example: Black-compatible E203, E501 line length)
ignore = [
    "E203",
    "E501"
]

# Enforce a max line length (Black uses 88 by default)
line-length = 88

# Extra formatting style
fix = true

[tool.ruff.format]
quote-style="double"

# Allow autofix for import sorting
[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = false
known-first-party = ["app"]
lines-between-types = 1
lines-after-imports = 2
order-by-type = false

# Example enforcing spacing after comma (E231) and preventing multiple spaces (E241)
extend-select = ["E241"]

# Double comma spacing: Actually E241 covers multiple spaces after comma
# so this ensures proper single space after commas.

[tool.pyright]
# Pyright settings for type checking
typeCheckingMode = "strict" # Enforces typing everywhere

# Ignore Django autogenerated files (migrations, settings, etc.)
exclude = [
    "**/migrations",
    "**/settings.py",
    "**/asgi.py",
    "**/wsgi.py"
]

# Allow imports even if Pyright can't find stub files
reportMissingImports = true
reportMissingTypeStubs = false

# Treat files without type hints as errors (can be relaxed to 'warning')
reportUntypedFunctionDecorator = "error"

# Enable automatic search for type hints in virtual env
venvPath = "."
venv = ".venv"

# For Django: point to your settings module for better type inference
# (requires django-stubs installed)
pythonVersion = "3.11"
pythonPlatform = "Linux"
